# polynomial-calculus

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
gui/: gui.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: FieldMultiplicationCache.hpp  Polynomial.cpp  Polynomial.hpp  Polynomial.hxx  PolynomialField.cpp  PolynomialField.hpp  PolynomialRing.cpp  PolynomialRing.hpp  PolynomialRing.hxx  Utils.hpp
tests/: CMakeLists.txt  TestBigNum.cpp  TestPolynomial.cpp  TestPolynomialField.cpp  TestPolynomialRing.cpp
